trustfall_core/test_data/tests/valid_queries/nonexistent_optional_with_tagged_immediate_filter.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Zero {
        zero: value @output @tag

        predecessor @optional {
            value @output @filter(op: "<", value: ["%zero"])
        }
    }
}"#,
    arguments: {},
)
