trustfall_core/test_data/tests/parse_errors/filter_with_value_instead_of_array.ron
TestGraphQLQuery (
    // The `value` in a filter expects an array with a single value instead of
    // just a single value.
    schema_name: "numbers",
    query: r#"
{
    Zero {
        value @filter(op: "=", value: "$zero")
    }
}"#,
    arguments: {
        "zero": Uint64(0)
    },
)
